more clarifications plus pr03 stuff

--- a/preprocessing/junction_table_merge_prelim.ipynb
+++ b/preprocessing/junction_table_merge_prelim.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fix_addresses_master'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-4a68fee28f77>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mfix_addresses_master\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fix_addresses_master'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_housing_projects = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/ToDatabase/TotalHousingFixed6-19.csv')"
+    "df_housing_projects = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/ToDatabase/TotalHousingFixed6-19.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_junction_table = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/ToDatabase/addr_db.csv')"
+    "df_junction_table = pd.read_csv('~/Documents/cds/temp.csv')"
    ]
   },
   {
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,33 +105,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1486 US HIGHWAY 19 S</td>\n",
-       "      <td>31.732116</td>\n",
-       "      <td>-84.170742</td>\n",
-       "      <td>20300.0</td>\n",
-       "      <td>1037.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1064 US HIGHWAY 19 S</td>\n",
-       "      <td>31.665719</td>\n",
-       "      <td>-84.173577</td>\n",
-       "      <td>20402.0</td>\n",
-       "      <td>3003.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>905 US HIGHWAY 19 S</td>\n",
-       "      <td>31.676679</td>\n",
-       "      <td>-84.172067</td>\n",
-       "      <td>20402.0</td>\n",
-       "      <td>1001.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>501 S MADISON ST</td>\n",
        "      <td>31.570488</td>\n",
        "      <td>-84.162164</td>\n",
@@ -127,28 +112,55 @@
        "      <td>1013.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>525 LINCOLN AVE</td>\n",
        "      <td>31.569466</td>\n",
        "      <td>-84.161175</td>\n",
        "      <td>1500.0</td>\n",
        "      <td>1012.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>609 S JACKSON ST</td>\n",
+       "      <td>31.568513</td>\n",
+       "      <td>-84.153922</td>\n",
+       "      <td>1403.0</td>\n",
+       "      <td>1027.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>602 S MONROE ST</td>\n",
+       "      <td>31.568661</td>\n",
+       "      <td>-84.158641</td>\n",
+       "      <td>1403.0</td>\n",
+       "      <td>1025.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>509 W GORDON AVE</td>\n",
+       "      <td>31.568554</td>\n",
+       "      <td>-84.159772</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1017.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0               Address     Xcoord     Ycoord    Tract  BlockGroup\n",
-       "0           0  1486 US HIGHWAY 19 S  31.732116 -84.170742  20300.0      1037.0\n",
-       "1           1  1064 US HIGHWAY 19 S  31.665719 -84.173577  20402.0      3003.0\n",
-       "2           2   905 US HIGHWAY 19 S  31.676679 -84.172067  20402.0      1001.0\n",
-       "3           3      501 S MADISON ST  31.570488 -84.162164   1500.0      1013.0\n",
-       "4           4       525 LINCOLN AVE  31.569466 -84.161175   1500.0      1012.0"
+       "   Unnamed: 0           Address     Xcoord     Ycoord   Tract  BlockGroup\n",
+       "0           0  501 S MADISON ST  31.570488 -84.162164  1500.0      1013.0\n",
+       "1           1   525 LINCOLN AVE  31.569466 -84.161175  1500.0      1012.0\n",
+       "2           2  609 S JACKSON ST  31.568513 -84.153922  1403.0      1027.0\n",
+       "3           3   602 S MONROE ST  31.568661 -84.158641  1403.0      1025.0\n",
+       "4           4  509 W GORDON AVE  31.568554 -84.159772  1500.0      1017.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +195,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>PrimaryID</th>\n",
        "      <th>Parcel ID</th>\n",
        "      <th>Address</th>\n",
        "      <th>City</th>\n",
@@ -203,7 +215,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>21342.0</td>\n",
        "      <td>0000Q/00025/009</td>\n",
        "      <td>1707 EDGERLY AVE</td>\n",
        "      <td>Albany</td>\n",
@@ -221,7 +233,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>26908.0</td>\n",
        "      <td>0000U/00006/002</td>\n",
        "      <td>703 DARTMOUTH LN</td>\n",
        "      <td>Albany</td>\n",
@@ -239,7 +251,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
+       "      <td>21818.0</td>\n",
        "      <td>0000H/00047/005</td>\n",
        "      <td>1115 W WADDELL AVE</td>\n",
        "      <td>Albany</td>\n",
@@ -257,7 +269,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
+       "      <td>29081.0</td>\n",
        "      <td>0000X/00003/034</td>\n",
        "      <td>313 FORRESTAL LN</td>\n",
        "      <td>Albany</td>\n",
@@ -275,7 +287,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
+       "      <td>22458.0</td>\n",
        "      <td>00240/00003/024</td>\n",
        "      <td>1125 JOEL DR</td>\n",
        "      <td>Albany</td>\n",
@@ -297,12 +309,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0        Parcel ID             Address    City State  \\\n",
-       "0           0  0000Q/00025/009    1707 EDGERLY AVE  Albany    GA   \n",
-       "1           1  0000U/00006/002    703 DARTMOUTH LN  Albany    GA   \n",
-       "2           2  0000H/00047/005  1115 W WADDELL AVE  Albany    GA   \n",
-       "3           3  0000X/00003/034    313 FORRESTAL LN  Albany    GA   \n",
-       "4           4  00240/00003/024        1125 JOEL DR  Albany    GA   \n",
+       "   PrimaryID        Parcel ID             Address    City State  \\\n",
+       "0    21342.0  0000Q/00025/009    1707 EDGERLY AVE  Albany    GA   \n",
+       "1    26908.0  0000U/00006/002    703 DARTMOUTH LN  Albany    GA   \n",
+       "2    21818.0  0000H/00047/005  1115 W WADDELL AVE  Albany    GA   \n",
+       "3    29081.0  0000X/00003/034    313 FORRESTAL LN  Albany    GA   \n",
+       "4    22458.0  00240/00003/024        1125 JOEL DR  Albany    GA   \n",
        "\n",
        "            XY Coordinates  Plan Year  ...  Activity Status Program  \\\n",
        "0   31.5735022, -84.191293       2007  ...        Completed    HOME   \n",
@@ -321,7 +333,7 @@
        "[5 rows x 17 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +377,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>PrimaryID</th>\n",
        "      <th>Parcel ID</th>\n",
        "      <th>Address</th>\n",
        "      <th>Plan Year</th>\n",
@@ -384,7 +396,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
+       "      <td>21342.0</td>\n",
        "      <td>0000Q/00025/009</td>\n",
        "      <td>1707 EDGERLY AVE</td>\n",
        "      <td>2007</td>\n",
@@ -401,7 +413,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>26908.0</td>\n",
        "      <td>0000U/00006/002</td>\n",
        "      <td>703 DARTMOUTH LN</td>\n",
        "      <td>2007</td>\n",
@@ -421,9 +433,9 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0        Parcel ID           Address  Plan Year  IDIS Project  \\\n",
-       "0           0  0000Q/00025/009  1707 EDGERLY AVE       2007             6   \n",
-       "1           1  0000U/00006/002  703 DARTMOUTH LN       2007             6   \n",
+       "   PrimaryID        Parcel ID           Address  Plan Year  IDIS Project  \\\n",
+       "0    21342.0  0000Q/00025/009  1707 EDGERLY AVE       2007             6   \n",
+       "1    26908.0  0000U/00006/002  703 DARTMOUTH LN       2007             6   \n",
        "\n",
        "                    Project  IDIS Activity ID Activity Status Program  \\\n",
        "0  Homeowner Rehabilitation               618       Completed    HOME   \n",
@@ -434,7 +446,7 @@
        "1       30185.60     30185.60      0.0            NaN       NaN  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +505,7 @@
        "(850,)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,35 +525,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "0                   1925 S RIVERVIEW DR\n",
-       "1     1401 E CAMPBELL ST/108 CARROLL ST\n",
-       "2                     608 RESIDENCE AVE\n",
-       "3                          2011 COVE CT\n",
-       "4                       113 SWAGGOTT RD\n",
-       "5                 242 E OGLETHORPE BLVD\n",
-       "6                 244 E OGLETHORPE BLVD\n",
-       "7                 246 E OGLETHORPE BLVD\n",
-       "8                 248 E OGLETHORPE BLVD\n",
-       "9                 250 E OGLETHORPE BLVD\n",
-       "10                252 E OGLETHORPE BLVD\n",
-       "11                254 E OGLETHORPE BLVD\n",
-       "12                255 E OGLETHORPE BLVD\n",
-       "13                256 E OGLETHORPE BLVD\n",
-       "14                257 E OGLETHORPE BLVD\n",
-       "15                258 E OGLETHORPE BLVD\n",
-       "16                259 E OGLETHORPE BLVD\n",
-       "17                260 E OGLETHORPE BLVD\n",
-       "18                           MERCER AVE\n",
+       "1                      105 HILLSIDE AVE\n",
+       "2     1401 E CAMPBELL ST/108 CARROLL ST\n",
+       "3                          507 EMILY ST\n",
+       "4                     608 RESIDENCE AVE\n",
+       "5                          2011 COVE CT\n",
+       "6                 242 E OGLETHORPE BLVD\n",
+       "7                 244 E OGLETHORPE BLVD\n",
+       "8                 246 E OGLETHORPE BLVD\n",
+       "9                 248 E OGLETHORPE BLVD\n",
+       "10                250 E OGLETHORPE BLVD\n",
+       "11                252 E OGLETHORPE BLVD\n",
+       "12                254 E OGLETHORPE BLVD\n",
+       "13                255 E OGLETHORPE BLVD\n",
+       "14                256 E OGLETHORPE BLVD\n",
+       "15                257 E OGLETHORPE BLVD\n",
+       "16                258 E OGLETHORPE BLVD\n",
+       "17                259 E OGLETHORPE BLVD\n",
+       "18                260 E OGLETHORPE BLVD\n",
+       "19                  2020 N RIVERVIEW DR\n",
+       "20                           MERCER AVE\n",
        "dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,9 +1185,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds] *",
+   "display_name": "cds_env",
    "language": "python",
-   "name": "conda-env-cds-py"
+   "name": "cds_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1185,7 +1199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
