--- a/Analysis/tables.ipynb
+++ b/Analysis/tables.ipynb
@@ -1205,10 +1205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_full.to_csv('albany.csv', index =  False)"
+   ]
   }
  ],
  "metadata": {
