--- a/Analysis/gas_housingproj_table.ipynb
+++ b/Analysis/gas_housingproj_table.ipynb
@@ -10,21 +10,208 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "block = pd.read_csv(\"/Users/davidreynolds/Dropbox/CDS-2019-AlbanyHub/ToDatabase/full_blockgroup.csv\")\n",
-    "address_counts = pd.read_csv(\"/Users/davidreynolds/Documents/CDS/Analysis/address_count_per_blockgroup.csv\")\n",
-    "address_count_block = pd.read_csv(\"/Users/davidreynolds/Documents/CDS/Analysis/address_count_per_blockgroup_housingproject.csv\")\n",
-    "avg_kwh = pd.read_csv(\"/Users/davidreynolds/Documents/CDS/Analysis/avgkwh_blockgroup_elec.csv\")\n",
-    "avg_kwh_block = pd.read_csv(\"/Users/davidreynolds/Documents/CDS/Analysis/avg_kwh_per_blockgroup.csv\")"
+    "## load in files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "block = pd.read_csv(\"/Users/oliviafiol/Dropbox/CDS-2019-AlbanyHub/ToDatabase/full_blockgroup.csv\")\n",
+    "address_counts = pd.read_csv(\"/Users/oliviafiol/Dropbox/CDS-2019-AlbanyHub/Processed-Data/address_count_per_blockgroup_gas.csv\")\n",
+    "address_count_block = pd.read_csv(\"/Users/oliviafiol/Dropbox/CDS-2019-AlbanyHub/Processed-Data/address_count_per_blockgroup_housingproject_gas.csv\")\n",
+    "avg_ccf = pd.read_csv(\"/Users/oliviafiol/Dropbox/CDS-2019-AlbanyHub/Processed-Data/avgccf_blockgroup_gas.csv\")\n",
+    "avg_ccf_block = pd.read_csv(\"/Users/oliviafiol/Dropbox/CDS-2019-AlbanyHub/Processed-Data/avg_ccf_per_blockgroup.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tract</th>\n",
+       "      <th>BlockGroup</th>\n",
+       "      <th>address_count</th>\n",
+       "      <th>mean_kwh</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1403</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>812.693596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>600</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>730.199837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>909.698944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10403</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1356.940079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>200</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>686.582310</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Tract  BlockGroup  address_count     mean_kwh\n",
+       "0   1403           1             13   812.693596\n",
+       "1    600           2              5   730.199837\n",
+       "2   1100           2             10   909.698944\n",
+       "3  10403           1              1  1356.940079\n",
+       "4    200           1             12   686.582310"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_ccf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tract</th>\n",
+       "      <th>BlockGroup</th>\n",
+       "      <th>avg_ccf</th>\n",
+       "      <th>numrecords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.807457</td>\n",
+       "      <td>28482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1403.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>23.884804</td>\n",
+       "      <td>15287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10900.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.829175</td>\n",
+       "      <td>521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.899399</td>\n",
+       "      <td>7654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10601.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>23.165816</td>\n",
+       "      <td>8624</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Tract  BlockGroup    avg_ccf  numrecords\n",
+       "0  10700.0         2.0  21.807457       28482\n",
+       "1   1403.0         1.0  23.884804       15287\n",
+       "2  10900.0         3.0   8.829175         521\n",
+       "3    100.0         1.0  20.899399        7654\n",
+       "4  10601.0         2.0  23.165816        8624"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_ccf_block.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
