--- a/census_processing/olivia_census.ipynb
+++ b/census_processing/olivia_census.ipynb
@@ -4665,7 +4665,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
