parsing pr03 for energy efficiency

--- a/preprocessing/housing/housing_completed.ipynb
+++ b/preprocessing/housing/housing_completed.ipynb
@@ -59,6 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most of this code is just cleaning and splitting to find relevant info. \n",
+    "\n",
+    "variable names and such will be explained below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -167,8 +176,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fields that we want to pull"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +228,7 @@
        " 'Description:PERFORM EMERGENCY REPAIRS TO A SINGLE-FAMILY OWNER-OCCUPIED UNIT.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\\n']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +238,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### formatting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +353,7 @@
        " 'Description:To expand the service of assessing individuals served to determine needs; and to enhance the services of the soup kitchen.']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,14 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,8 +397,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start: df is name of dataframe.\n",
+    "\n",
+    "### descriptions may need to be cleaned up a bit more also. Can pull in more fields if necessary from the pr03s. The thing that may be useful is pulling in the objective."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +519,7 @@
        "4                         THE REPAYMENT OF A SECTION 108 LOAN FOR THE MCGREGOR PROJECT  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,12 +957,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Everything below is pulling in HOME files and standardizing addresses. Would recommend copying in everything between start and here and copying into a separate file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# s_addresses contains all the addresses in the completed projects file\n",
+    "# s_addresses contains all the addresses in the pr03 files\n",
     "s_addresses = df['Address']\n",
     "for i in range(len(s_addresses)):\n",
     "    words = s_addresses[i].split()\n",
