--- a/preprocessing/propertyvalues/sales.ipynb
+++ b/preprocessing/propertyvalues/sales.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,32 +191,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(): # takes in the dictionary and tests to see if a new ending for a given address can be found in full data\n",
-    "    f_addresses_set = set(f_addresses)\n",
-    "    t_addresses_set = set(t_addresses)\n",
+    "def test(f_addresses, s_addresses): # takes in the dictionary and tests to see if a new ending for a given address can be found in full data\n",
+    "    f_addresses_set = set(f_addresses) # sets to make finds faster\n",
+    "    s_addresses_set = set(s_addresses)\n",
     "    lis = []\n",
     "    newly_found = []\n",
     "    replace_in_tax = {}\n",
     "    words = []\n",
-    "    dictionary = construct_dictionary()\n",
+    "    dictionary = construct_dictionary() # dictionary has key: st_name, value: ending\n",
     "    counter = 0\n",
-    "    for i in range(len(no_tax)):\n",
+    "    for i in range(len(no_tax)): # iterate through list of addresses in junct that do not have tax data\n",
     "        split = no_tax.iloc[i].split()\n",
     "        word = split[:-1]\n",
     "        wordo = \"\"\n",
     "        for a in word:\n",
     "            wordo += a + \" \"\n",
-    "        wordo = wordo.strip()\n",
-    "        st_name = construct_st_name(no_tax.iloc[i])\n",
+    "        wordo = wordo.strip() # get everything but ending from current address\n",
+    "        st_name = construct_st_name(no_tax.iloc[i]) # get st name from current address\n",
     "        found = False\n",
-    "        if st_name in dictionary.keys():\n",
-    "            for ending in dictionary[st_name]: #test a full address\n",
+    "        if st_name in dictionary.keys(): # if we have an ending for this st from our 'trusted' dataset\n",
+    "            for ending in dictionary[st_name]:\n",
     "                test = wordo + \" \" + ending\n",
     "                words.append(test)\n",
-    "                if test in t_addresses_set:\n",
-    "                    newly_found.append(test)\n",
-    "                    replace_in_tax[test] = no_tax.iloc[i]\n",
-    "                    found = True\n",
+    "                if test in t_addresses_set: # test a full address to see if it is in our tax set\n",
+    "                    newly_found.append(test) # if it is, we will store the wrong address\n",
+    "                    replace_in_tax[test] = no_tax.iloc[i] # dictionary for replacing full address with original junct\n",
+    "                    found = True # only want the first ending\n",
     "                    continue\n",
     "            if not found:\n",
     "                newly_found.append(no_tax.iloc[i])\n",
@@ -224,6 +224,37 @@
     "            newly_found.append(no_tax.iloc[i])\n",
     "            \n",
     "    return pd.Series(newly_found), replace_in_tax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_addresses(): # fixes directions after getting endings\n",
+    "    f_addresses_set = set(f_addresses)\n",
+    "    t_addresses_set = set(t_addresses)\n",
+    "    newly_found_2 = []\n",
+    "    newly_found, replace_in_tax = test()\n",
+    "    number_dict = construct_number_dictionary()\n",
+    "    for i in range(len(newly_found)): # loop through values in main that do not have tax data\n",
+    "        addr = newly_found.iloc[i]\n",
+    "        car = contains_cardinal(addr)\n",
+    "        ind = \"NA\"\n",
+    "        if car != None:\n",
+    "            ind = addr.find(car)\n",
+    "            addr = addr[:ind] + \" \" + addr[ind+3:]\n",
+    "            if addr in t_addresses_set: # check if we can find the addr if we take out the cardinal direction\n",
+    "                newly_found_2.append(addr) # if we can, we ultimately want to update the tax data with the correct direction\n",
+    "                replace_in_tax[addr] = newly_found.iloc[i]\n",
+    "                continue\n",
+    "            else:\n",
+    "                newly_found_2.append(addr)\n",
+    "        else:\n",
+    "            newly_found_2.append(addr)\n",
+    "    newly_found_2 = pd.Series(newly_found_2)\n",
+    "    return newly_found_2, replace_in_tax"
    ]
   },
   {
@@ -1220,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1392,7 @@
        "4                 $0.00          NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
