Fixed drop issue

--- a/property_scraper/property_data.ipynb
+++ b/property_scraper/property_data.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "#Convert to pandas dataframe\n",
     "dfp = prop_split(data)\n",
-    "dfp.drop_duplicates(subset=\"address\")\n",
+    "dfp.drop_duplicates(subset=\"address\", inplace=True)\n",
     "dfp.index = range(len(dfp))\n",
     "len(dfp)"
    ]
