--- a/preprocessing/propertyvalues/fix_tax_addresses_master.ipynb
+++ b/preprocessing/propertyvalues/fix_tax_addresses_master.ipynb
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "4     28600     28600   6/20/2007    RESIDENTIAL        14.30  2009      30589  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
        "(205574, 23)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,33 +1017,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3       686\n",
+       "3       685\n",
        "4       482\n",
-       "2       472\n",
-       "8       465\n",
-       "7       452\n",
-       "6       430\n",
-       "5       358\n",
-       "9       320\n",
+       "2       470\n",
+       "8       467\n",
+       "7       453\n",
+       "9       319\n",
+       "6       292\n",
        "1       281\n",
-       "10      154\n",
-       "14      127\n",
+       "5       220\n",
+       "10      153\n",
+       "14      128\n",
        "13      111\n",
-       "12       90\n",
-       "15       53\n",
-       "17       46\n",
+       "12       88\n",
+       "15       50\n",
+       "17       47\n",
        "16       45\n",
        "19       35\n",
        "20       29\n",
-       "18       23\n",
+       "18       22\n",
        "21       16\n",
-       "26       14\n",
+       "26       15\n",
        "23       14\n",
        "25       12\n",
        "24       10\n",
@@ -1128,7 +1128,7 @@
        "Name: ZONE_CODE, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2149,7 @@
        "Name: FULL_ADDRESS, Length: 403425, dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5223,7 +5223,7 @@
        "199      3100   4/27/2007    RESIDENTIAL         0.17  2009      30589  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5234,7 +5234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -5243,7 +5243,7 @@
        "'11/12/2008'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5254,7 +5254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5466,7 +5466,7 @@
        "382319         NaN     COMMERCIAL         1.03  2019      13777  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5477,7 +5477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5689,7 +5689,7 @@
        "382320         NaN    RESIDENTIAL         1.33  2019      13763  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5700,7 +5700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6710,7 +6710,7 @@
        "Name: PERSKEY, Length: 3713, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6721,7 +6721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -7688,7 +7688,7 @@
        "[28 rows x 23 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7699,7 +7699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -8166,7 +8166,7 @@
        "403861    140100   4/20/2015     COMMERCIAL         4.65  2019      30589  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8177,16 +8177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x13e15f940>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x13187cda0>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8197,7 +8197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8206,7 +8206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -8238,7 +8238,7 @@
        "Name: 9235, dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8249,7 +8249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -8258,7 +8258,7 @@
        "421915"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8269,7 +8269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8278,7 +8278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -8490,7 +8490,7 @@
        "234860         NaN     COMMERCIAL         1.03  2019      13777  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8501,7 +8501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8510,7 +8510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8547,7 +8547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -8569,7 +8569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -8766,7 +8766,7 @@
        "9     13100  11/12/2008    RESIDENTIAL         0.00  2009      30589  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8777,7 +8777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -8796,7 +8796,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8807,7 +8807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -8827,7 +8827,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8838,7 +8838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -8852,7 +8852,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8863,7 +8863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8872,7 +8872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -9262,7 +9262,7 @@
        "19   6/20/2007  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9273,7 +9273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -9282,7 +9282,7 @@
        "'1/13/2009'"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9293,7 +9293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9319,7 +9319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -9344,7 +9344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -9522,7 +9522,7 @@
        "19    2007        6     20"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9533,7 +9533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9542,7 +9542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -9815,7 +9815,7 @@
        "234860    2015        4     20  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9826,16 +9826,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_final.to_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/ToDatabase/TotalTax.csv', index=False)"
+    "#df_final.to_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/ToDatabase/TotalTax_v03.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9846,16 +9846,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5868,)"
+       "(8795,)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9866,7 +9866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -9875,7 +9875,7 @@
        "(421915,)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9886,16 +9886,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(30721,)"
+       "(30590,)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
